--- a/world_population_regression.ipynb
+++ b/world_population_regression.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 47,
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -30,14 +30,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 48,
    "outputs": [],
    "source": [
-    "with open('/Users/saakethkoka/Downloads/API_SP.POP.TOTL_DS2_en_csv_v2_3469297/API_SP.POP.TOTL_DS2_en_csv_v2_3469297.csv', 'r') as f:\n",
+    "with open('PopulationData.csv', 'r') as f:\n",
     "     lines = f.readlines()\n",
-    "world_data = lines[264].strip('\\n')\n",
+    "world_data = lines[218].strip('\\n')\n",
     "world_data = world_data.split(',')\n",
-    "world_data = world_data[5:-1]\n",
+    "world_data = world_data[5:]\n",
     "for i in range(len(world_data)):\n",
     "    world_data[i] = float(world_data[i].replace('\"', ''))\n",
     "# Create list from 0-60\n",
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 49,
    "outputs": [],
    "source": [
     "years = np.array(years).reshape(-1, 1)\n",
@@ -92,13 +92,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 50,
    "outputs": [
     {
      "data": {
       "text/plain": "LinearRegression()"
      },
-     "execution_count": 4,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 51,
    "outputs": [
     {
      "name": "stdout",
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 52,
    "outputs": [],
    "source": [
     "years = list(range(1960, 2123))\n",
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 53,
    "outputs": [
     {
      "data": {
