Converting files from .py to notebook format

--- a/Linear_Regression.ipynb
+++ b/Linear_Regression.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 8,
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 9,
    "outputs": [],
    "source": [
     "with open('PopulationData.csv', 'r') as f:\n",
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 10,
    "outputs": [],
    "source": [
     "years = np.array(years).reshape(-1, 1)\n",
@@ -92,13 +92,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 11,
    "outputs": [
     {
      "data": {
       "text/plain": "LinearRegression()"
      },
-     "execution_count": 50,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 12,
    "outputs": [
     {
      "name": "stdout",
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 13,
    "outputs": [],
    "source": [
     "years = list(range(1960, 2123))\n",
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 14,
    "outputs": [
     {
      "data": {
@@ -192,7 +192,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "outputs": [],
    "source": [],
    "metadata": {
