--- a/writeup.ipynb
+++ b/writeup.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 7,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -40,7 +40,7 @@
     "# Data:\n",
     "We sourced the data from [The World Bank](https://data.worldbank.org/indicator/SP.POP.TOTL?locations=1W). The data has population measurements between 1960 and 2020 for all countries and regions in the world, along with an aggregate measurement. For our models we used the aggregate measurement of total world population, as this provided the most complete forecast.\n",
     "\n",
-    "During the data sourcing process we also evaluated another dataset which had world population data between 3000 BC and 2020, but we did not find it appropriate to use because most of the data was estimated based on other models, rather than a census. We found it unsuitable to use data which had been estimated by other estimations to train our data and instead chose the dataset which consisted of census-backed data.\n",
+    "During the data sourcing process we also evaluated another dataset which had world population data between 3000 BC and 2020, but we did not find it appropriate to use because most of the data was estimated based on other models, rather than a census. We found it unsuitable to use data which had been estimated by other models to train our model and instead chose the dataset which consisted of census-backed data.\n",
     "\n",
     "In the late 1950s, the United Nations published international standards for conducting a census. With these new standards in place, census data became more accurate and reliable. With this, we can assume that the historical population data set we are using has a high degree of accuracy since it begins after 1960. Because of this, we are confident that the data has very little inaccuracies and the probability of it introducing bias into our models is low.\n",
     "\n",
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 14,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 15,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 16,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 17,
    "outputs": [
     {
      "name": "stdout",
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 18,
    "outputs": [
     {
      "name": "stdout",
@@ -210,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 19,
    "outputs": [
     {
      "data": {
@@ -245,7 +245,7 @@
    "cell_type": "markdown",
    "source": [
     "# Validation:\n",
-    "Our results are similar to predictions made by the United Nations’ Department of Economic and Social Affairs. The UN predicts that in the year 2100, the population will be 10,875,393,719, while our model predicts there will be 11,373,304,881 people on this planet. This fits comfortably within the UN’s 95% confidence interval between 9,424,390,594 and 12,663,070,008. "
+    "Our results are similar to predictions made by the United Nations’ Department of Economic and Social Affairs. The UN predicts that in the year 2100, the population will be 10,875,393,719, while our model predicts there will be 11,373,304,881 people on the planet. This fits comfortably within the UN’s 95% confidence interval between 9,424,390,594 and 12,663,070,008. With this, we are confident that our model is accurate."
    ],
    "metadata": {
     "collapsed": false,
@@ -259,7 +259,7 @@
    "source": [
     "# Failed Models:\n",
     "## Polynomial Fit:\n",
-    "One method we used to predict world population in 2122 was to run a polynomial regression on our dataset, and then use the created model to then approximate population by year. To accomplish this, we used numpy’s “polyfit” to calculate our coefficients to pass into our 1-dimensional polynomial class that would ultimately serve as our model. After the model was constructed we used metrics provided by sklearn to determine how accurate the fit was. Within this library exists a method named “r2_score” that essentially scores the accuracy of the regression with a 1.0 being the best possible score. The score our fit received was 0.9999094449058586 which is very near to 1.0. This coefficient of determination allowed us to know our model was fairly accurate and we could continue with further approximations. We then used this model to predict the population in 2122 as about 7,265,750,433 which is fairly off of the United Nations’ estimate of around 11 billion around 2100. A more detailed view of the data can be visualized in the graph below:\n",
+    "One method we used to predict world population in 2122 was to run a polynomial regression on our dataset, and then use the created model to then approximate population by year. To accomplish this, we used numpy’s “polyfit” to calculate our coefficients to pass into our 1-dimensional polynomial class that would ultimately serve as our model. After the model was constructed we used metrics provided by sklearn to determine how accurate the fit was. Within this library exists a method named “r2_score” that essentially scores the accuracy of the regression with a 1.0 being the best possible score. The score our fit received was 0.9999094449058586 which is very near to 1.0. This coefficient of determination allowed us to know our model was a good fit for our data and we could continue with further approximations. We then used this model to predict the population in 2122 as about 7,265,750,433 which is fairly off of the United Nations’ estimate of around 11 billion around 2100. A more detailed view of the data can be visualized in the graph below:\n",
     "\n",
     "![](https://github.com/loganschmitt/sml22-pa01-population/blob/master/charts/PolynomialRegression.png?raw=true)\n",
     "\n",
@@ -278,10 +278,9 @@
     "From the graph, and more specifically the equation, we could see that 160,561,723,725.06 * log(2122) - 1,214,301,175,386.19 would evaluate to nearly 16 billion people. This is roughly 5 billion or around 45% more than the likely estimate created by the United Nations of 11 billion. Suffice to say, we ended up going with another, more-likely-accurate model we created.\n",
     "\n",
     "## Scientific Population Growth (using births and death rates):\n",
-    "The last part that we worked on was the model we initially wanted to use as further validation of one of our initial four models (linear, exponential, logistic, and polynomial). We did this by first creating a logistic function with the assistance of stack overflow. We also knew that later on, it would be necessary to have a function that calculates population growth, so we drew that up early to keep our code concise. Then we read in the data from our csv file and separated the birth and death rates from 2000 – 2021. After that, to prevent an overflow error from later occurring, which we only learned existed by trial and error, we divided our birth and death rates by a million. From there I flattened the numpy arrays into 1D arrays as opposed to 2D arrays. After that, we used the covariance to calculate the r2 score for both the birth and the death rates. Using the r2 score we were able to calculate the prediction for births and deaths in the year 2122, but that information wasn’t helpful without having the full list of births and death rates calculated for every year till 2122, so we calculated and created an array of birth and death rates all the way until 2122. Using that, we were able to create a loop that used the current world population as well as the birth and death rates to calculate the world population for the next year, repeating that cycle until 2122. After doing this, we discovered that this model is extremely inaccurate with the total population falling to a negative number of people by 2122.\n",
+    "The last part that we worked on was the model we initially wanted to use as further validation of one of our initial four models (linear, exponential, logistic, and polynomial). We did this by first defining a logistic function. We also knew that later on, it would be necessary to have a function that calculates population growth, so we drew that up early to keep our code concise. Then we read in the data from our csv file and separated the birth and death rates from 2000 – 2021. After that, to prevent an overflow error from later occurring, which we only learned existed by trial and error, we divided our birth and death rates by a million. From there we flattened the numpy arrays into 1D arrays as opposed to 2D arrays. After that, we used the covariance to calculate the r2 score for both the birth and the death rates. Using the r2 score we were able to calculate the prediction for births and deaths in the year 2122, but that information wasn’t helpful without having the full list of births and death rates calculated for every year till 2122, so we calculated and created an array of birth and death rates all the way until 2122. Using that, we were able to create a loop that used the current world population as well as the birth and death rates to calculate the world population for the next year, repeating that cycle until 2122. After doing this, we discovered that this model is extremely inaccurate with the total population falling to a negative number of people by 2122.\n",
     "\n",
-    "![](https://github.com/loganschmitt/sml22-pa01-population/blob/master/charts/ScientificGrowth.png?raw=true)\n",
-    "\n"
+    "![](https://github.com/loganschmitt/sml22-pa01-population/blob/master/charts/ScientificGrowth.png?raw=true)\n"
    ],
    "metadata": {
     "collapsed": false,
